Bug 257148 - Fix Mac JSCOnly build
Summary: Fix Mac JSCOnly build
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Elliott Williams
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-22 13:21 PDT by Elliott Williams
Modified: 2023-05-26 15:25 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elliott Williams 2023-05-22 13:21:02 PDT
It broke after OSLogPrintStream was moved in https://commits.webkit.org/262668@main
Comment 1 Radar WebKit Bug Importer 2023-05-22 13:21:17 PDT
<rdar://problem/109674456>
Comment 2 Elliott Williams 2023-05-22 13:28:14 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14201
Comment 3 EWS 2023-05-26 15:25:43 PDT
Committed 264607@main (74971bf54ad6): <https://commits.webkit.org/264607@main>

Reviewed commits have been landed. Closing PR #14201 and removing active labels.