Fix Mac JSCOnly build https://bugs.webkit.org/show_bug.cgi?id=257148 rdar://109674456

Reviewed by Alexey Proskuryakov.

OSLogPrintStream is now an objc++ file. Reflect this in CMakeLists.

As the JSCOnly port does not have a PLATFORM() macro, platform-derived
flags like USE(CF) are not available even though the port now does objc
compilation on macOS. To compensate, wrap use of Foundation types
(namely NSString) in USE(FOUNDATION). Both macros are based on
PLATFORM(COCOA).

* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/text/AtomString.h:
* Source/WTF/wtf/text/WTFString.h:

Canonical link: https://commits.webkit.org/264607@main